--- a/www/index.html
+++ b/www/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <meta name="color-scheme" content="light dark">
-        <title>Hello World</title>
-    </head>
-    <body>
 
-        <ons-navigator swipeable id="myNavigator" page="page1.html"></ons-navigator>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+    <meta name="color-scheme" content="light dark">
+    <title>Todo List</title>
+</head>
 
-        <template id="page1.html">
+<body>
+    <ons-navigator swipeable id="myNavigator" page="page1.html"></ons-navigator>
+
+    <template id="page1.html">
         <ons-page id="page1">
-            <ons-toolbar>
-            <div class="center">Page 1</div>
-            </ons-toolbar>
-
-            <p>This is the first page.</p>
-
-            <ons-button id="push-button">Push page</ons-button>
+            <div class="superior">
+                <div class="sup-1"></div>
+                <div class="sup-2"></div>
+            </div>
+            <img src="img/home.png" alt="" class="image">
+            <div class="container">
+                <h1>Get things done with TODo</h1>
+                <p>Lorem ipsum dolor sit amet,
+                    consectetur adipisicing. Maxime,
+                    tempore! Animi nemo aut atque,
+                    deleniti nihil dolorem repellendus.</p>
+                <ons-button id="push-button">Get Started</ons-button>
+            </div>
         </ons-page>
-        </template>
+    </template>
 
+
+    <!--
         <template id="page2.html">
         <ons-page id="page2">
             <ons-toolbar>
@@ -35,11 +45,13 @@
             <p>This is the second page.</p>
         </ons-page>
         </template>
+        -->
 
-        <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
-        <link rel="stylesheet" href="css/onsenui-core.min.css">
-        <link rel="stylesheet" href="css/onsen-css-components.min.css">
-        <script src="js/onsenui.min.js"></script>
-    </body>
+    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="css/onsenui-core.min.css">
+    <link rel="stylesheet" href="css/onsen-css-components.min.css">
+    <link rel="stylesheet" href="css/screens/index.css">
+    <script src="js/onsenui.min.js"></script>
+</body>
+
 </html>
