Obteniendo por geolocalizacion las coordenadas del dispositivo y mostrando la información en una alerta

--- a/www/index.html
+++ b/www/index.html
@@ -118,6 +118,7 @@
                     <div class="form-buttons">
                         <ons-button class="saveNotes">Guardar</ons-button>
                         <ons-button class="pushMyNotes">Mis notas</ons-button>
+                        <ons-button class="getLocation">Ubicación</ons-button>
                     </div>
                 </div>
             </div>
