Cambio de color de fondo con transición

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <ons-navigator swipeable id="myNavigator" page="page4.html"></ons-navigator>
+    <ons-navigator swipeable id="myNavigator" page="page3.html"></ons-navigator>
 
     <template id="page1.html">
         <ons-page id="page1">
@@ -70,6 +70,7 @@
                 <div class="sup-2"></div>
             </div>
             <div class="buttonAdd">
+                <input type="color" id="colorSelection" style="display: none;">
                 <ion-icon name="color-palette-outline" style="font-size: 40px;" class="pickColor"></ion-icon>
             </div>
             <div class="container-page3">
