--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <ons-navigator swipeable id="myNavigator" page="page4.html"></ons-navigator>
+    <ons-navigator swipeable id="myNavigator" page="page6.html"></ons-navigator>
 
     <template id="page1.html">
         <ons-page id="page1">
@@ -114,8 +114,8 @@
                         <div class="option" style="color: white;">
                             Prioridad
                             <ons-select id="choose-sel" value=>
-                                <option value="basic">Alta</option>
-                                <option value="material">Baja</option>
+                                <option value="Alta">Alta</option>
+                                <option value="Baja">Baja</option>
                             </ons-select>
                         </div>
                     </div>
@@ -170,6 +170,15 @@
         </ons-page>
     </template>
 
+    <template id="page6.html">
+        <ons-page id="page6">
+            <ons-toolbar>
+                <div class="left"><ons-back-button>Page 1</ons-back-button></div>
+                <div class="center"></div>
+            </ons-toolbar>
+        </ons-page>
+    </template>
+
     <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/onsenui-core.min.css">
     <link rel="stylesheet" href="css/onsen-css-components.min.css">
@@ -178,7 +187,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script>(g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
-            ({ key: "AIzaSyBNaC5Le8TROOyNcI8m0ywToNIuuktAh7Y", v: "weekly" });</script>
+            ({ key: "", v: "weekly" });</script>
 </body>
 
 </html>
